--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 </head>
 
 <body>
+    <header class="nav-header">
+        <nav class="index-nav">
+            <div class="nav-div">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./calender.html">Calender</a></li>
+                    <li><a href="./grid.html">Grid</a></li>
+                    <li><a href="./form.html">Form</a></li>
+                    <li><a href="./media query.html">Media Query</a></li>
+                    <li><a href="./media.html"></a>Media</li>
+                    <li><a href="./responsive.html">Responsive</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <h1>Flexbox Layout</h1>
     <div class="container">
 
