--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="./grid.html">Grid</a></li>
                     <li><a href="./form.html">Form</a></li>
                     <li><a href="./media query.html">Media Query</a></li>
-                    <li><a href="./media.html"></a>Media</li>
+                    <li><a href="./media.html">Media</a></li>
                     <li><a href="./responsive.html">Responsive</a></li>
                 </ul>
             </div>
